css/style.css
@import url('https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    scroll-behavior: smooth;
}

body {
    font-size: 18px;
    font-family: 'Public Sans', sans-serif;
    /* background-color: hsl(0, 0%, 100%); */
    /* background-color: ; */
    background-color: rgb(250, 250, 250);
   
    
}


img {
    width: 100px;
}

a {
    text-decoration: none;
    color:  hsl(233, 26%, 24%);
}

li {
    list-style: none;
}



/*******************************
        Generic Classes  
*******************************/

.hidden {
    display: none;
}

.nav-menu ul .no-margin-bottom {
    margin-bottom: 0;
}

.font-weight-light {
    font-weight: 300;
}

.font-weight-heavy {
    font-weight: 400;
}



/* Styling layout */

.nav-container {
    display: flex;
    position: relative;
    padding: 1.2rem 1.3rem;
    background-color: white;
    justify-content: space-between;
    flex-direction: row;
    z-index: 100;
    
}

.nav-wrapper {
    display: flex;
    /* flex-direction: column; */
    justify-content: space-between;
}

.logo img {
    width: 8.5rem;
    vertical-align: middle;
}



/* Navigation menu */

.nav-menu {
    position: absolute;
    display: flex;
    background-color: white;
    top: 5rem;
    left: 1.5rem;
    right: 1.5rem;
    border-radius: 5px;
    justify-content: center;
    box-shadow: 2px 2px 100px rgb(56, 55, 55);
    display: none;
    background-color: white;
    z-index: 5;
}


.nav-menu-open {
    width: auto;
    display: flex;
    transform: translateX(0%);
    opacity: 100%;
}


.nav-menu ul{
    padding: 2rem;
    text-align: center;
}

.nav-menu ul li {
    margin-bottom: 1.7rem;
}

.nav-menu ul li a{ 
    letter-spacing: 1px;
}

.nav-menu ul li a:hover,
.nav-menu ul li a:focus {
    color: rgb(71, 71, 71);
}


/* Hamburger icon */

.hamburger {
    display: block;
    position: absolute;
    right: 1rem;
}

.hamburger-icon {
    width: 1.5rem;
}   

.hamburger-open {
    display: none;
}


.close-nav-menu {
    display: none;
    position: absolute;
    right: 1rem;
}

.close-nav-menu-icon {
    vertical-align: middle;
    width: 1rem;
}

.open-nav-menu {
    display: inline-block;
}

.nav-request-invite {
    display: none;
}

/* introduction section */

.intro-content {
    position: relative;
    overflow: hidden;
}

.mockup-section {
    height: 300px;
}

.mockup-background img {
    display: block;
    width: 100%;
    position: relative;
    top: -50px;
    z-index: 1;
}

.intro-mockups {
    display: flex;
    justify-content: center;
}

.intro-mockups img {
    display:block;
    width: 95%;
    margin: 0 auto;
    position: absolute;
    top: -48px;
    z-index: 2;
}



/* intro content */

.intro-content {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 0 1.2rem 5rem 1.2rem;
    text-align: center;
    max-width: 40rem;
}


.intro-content-heading {
    font-size: 2.2rem;
    color: hsl(233, 26%, 24%);
    margin-bottom: 1rem;
}


.intro-content-text {
    font-size: .9rem;
    color: rgb(139, 149, 177);
    text-align: justify;
    line-height: 1.4rem;
    margin-bottom: 1.5rem;
}

.request-invite-btn {
    font-size: .9rem;
    font-weight: 700;
    /* border: 1px solid black; */
    padding: 1rem 1.9rem;
    border-radius: 50px;
    letter-spacing: 1px;
    background-image: linear-gradient(90deg, hsl(136, 65%, 51%), hsl(192, 70%, 51%));
    color: white;
    cursor: pointer;
}




/* choose bank */

.choose-bank-section {
    padding: 5rem 1.2rem 2rem 1.2rem;
    text-align: center;
    position: relative;
    background-color:  hsl(220, 16%, 96%);
    z-index: 1000;
}

.choose-bank-wrapper {
    width: 100%;
    max-width: 1400px;
    margin: 0 auto;
}

.choose-bank-heading {
    font-size: 1.9rem;
    color: hsl(233, 26%, 24%);
    margin-bottom: 1.5rem;
}


.choose-bank-content {
    font-size: .9rem;
    color: rgb(139, 144, 158);
    line-height: 1.4rem;
    margin-bottom: 4rem;
}


.choose-bank-card-img img {
    width: 4.5rem;
    margin-bottom: 1.6rem;
}

.choose-bank-card-heading {
    color: hsl(233, 26%, 24%);
    margin-bottom: 1.6rem;
}


.choose-bank-card-content {
    font-size: .9rem;
    color: rgb(139, 144, 158);
    margin-bottom: 2.5rem;
}



/* Latest Articles */

.latest-articles {
    padding: 6rem 1.2rem 3rem;
    background-color: hsl(0, 0%, 98%);
    display: flex;
    flex-direction: column;
    align-items: center;
}

.articles-wrapper {
    display: flex;
    flex-direction: column;
    align-items: center;
    max-width: 1400px;
}

.latest-articles-heading {
    font-size: 1.9rem;
    color: hsl(233, 26%, 24%);
    margin-bottom: 1.5rem;
}



.latest-article-card {
    background-color: white;
    display: flex;
    flex-direction: column;
    align-items: center;
    border-radius: 6px;
    margin-bottom: 2rem;
    max-width: 533px;
}


.latest-article-card-image img{
    width: 100%;
    max-height: 19.72rem;
    border-top-left-radius: 6px;
    border-top-right-radius: 6px;
}

.latest-article-card-content {
    padding: 1.6rem 1.7rem 3rem;
}

.latest-article-card-author {
    font-size: .6rem;
    letter-spacing: .5px;
    color: rgb(139, 144, 158);
    margin-bottom: 1rem;
}

.latest-article-card-heading {
    font-size: 1rem;
    margin-bottom: 1rem;
    cursor: pointer;
}
.latest-article-card-heading:hover,
.latest-article-card-heading:focus {
    color: hsl(136, 65%, 51%);
}

.latest-article-card-text {
    font-size: .8rem;
    text-align: left;
    color: rgb(139, 144, 158);
}


footer {
    background-color: hsl(229, 24%, 28%);
    padding: 3rem;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.footer-wrapper {
    display: flex;
    flex-direction: column;
    align-items: center;
    max-width: 1200px;
}
/* ... */

